--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -3,12 +3,14 @@
   justify-content: space-between;
   align-items: center;
   background-color: #333;
+  padding-top: 9px;
+  padding-bottom: 9px;
 
   &__auth {
     a {
       display: inline-block;
       background-color: #333;
-      padding: 10px 25px;
+      padding: 7px 25px;
       transition: all 0.2s ease-in-out;
 
       &:last-child {
