--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -4,7 +4,7 @@
     background-size: cover;
     background-position: right;
     height: 93.7vh;
-    padding: 200px 0 0 200px;
+    padding: 200px 0 0 15vw;
 
     &-text {
       h1 {
