--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -6,19 +6,21 @@
   padding-top: 9px;
   padding-bottom: 9px;
 
+  a {
+    padding: 7px 25px;
+    display: inline-block;
+    background-color: #333;
+    transition: all 0.2s ease-in-out;
+
+    &:hover {
+      background-color: #595959;
+    }
+  }
+
   &__auth {
     a {
-      display: inline-block;
-      background-color: #333;
-      padding: 7px 25px;
-      transition: all 0.2s ease-in-out;
-
       &:last-child {
         border-left: 1px solid #828282;
-      }
-
-      &:hover {
-        background-color: #202020;
       }
     }
   }
