--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,14 +2,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #333;
+  background-color: #2e2e2e;
   padding-top: 9px;
   padding-bottom: 9px;
 
   a {
     padding: 7px 25px;
     display: inline-block;
-    background-color: #333;
+    background-color: #2e2e2e;
     transition: all 0.2s ease-in-out;
 
     &:hover {
