--- a/src/components/StockData/stockData.scss
+++ b/src/components/StockData/stockData.scss
@@ -2,6 +2,8 @@
   background-color: #222;
   padding-top: 10px;
   padding-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
 
   h3 {
     font-weight: 500;
