--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -59,7 +59,8 @@ select {
   font: inherit;
 }
 
-a, button {
+a,
+button {
   text-decoration: none;
   box-shadow: none;
   border-style: none;
@@ -75,6 +76,42 @@ a, button {
   }
 }
 
+// reused styles below
+
 .container {
   padding: 0 4vw;
+}
+
+.green-button {
+  display: block;
+  background-color: #23b249;
+  padding: 12px 40px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+
+  &:hover {
+    background-color: #1e7d37;
+  }
+
+  &:active {
+    background-color: #6c89e1;
+  }
+}
+
+.form-input {
+  padding: 10px;
+  width: 30vw;
+  border: 1px solid #b5b5b5;
+  border-radius: 5px;
+  background-color: #f4f7fc;
+  margin-bottom: 20px;
+}
+
+//------------ 600px ------------------
+
+@media(max-width: 600px) {
+  .container {
+    padding: 0 30px;
+  }
 }
